--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import About from "../components/About.astro";
+import CTASection from "../components/CTASection.astro";
 import Hero from "../components/Hero.astro";
 import Services from "../components/Services.astro";
 import Layout from "../layouts/Layout.astro";
@@ -10,4 +11,5 @@ import "../styles/global.css";
     <Hero />
     <Services />
     <About />
+    <CTASection />
 </Layout>
