--- a/src/components/CTASection.astro
+++ b/src/components/CTASection.astro
@@ -18,7 +18,7 @@ import Button from "./Button.astro";
             text={CTA.description}
             class="text-center text-primary"
         />
-        <div class="mt-3 md:mt-10 text-center">
+        <div class="pt-10 text-center">
             <Button href={CTA.button.href} text={CTA.button.label} />
         </div>
     </div>
