--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import About from "../components/About.astro";
 import CTASection from "../components/CTASection.astro";
 import Hero from "../components/Hero.astro";
+import Portfolio from "../components/Portfolio.astro";
 import Services from "../components/Services.astro";
 import Layout from "../layouts/Layout.astro";
 import "../styles/global.css";
@@ -12,4 +13,5 @@ import "../styles/global.css";
     <Services />
     <About />
     <CTASection />
+    <Portfolio />
 </Layout>
