--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -3,6 +3,7 @@ import ContentDescription from "./ContentDescription.astro";
 import ContentHeader from "./ContentHeader.astro";
 import ContentSubHeader from "./ContentSubHeader.astro";
 import { PORTFOLIO } from "../content/portfolio";
+import PortfolioSlider from "./PortfolioSlider.astro";
 ---
 
 <section id={PORTFOLIO.id} class="bg-dark scroll-mt-15 md:scroll-mt-22.5">
@@ -20,4 +21,5 @@ import { PORTFOLIO } from "../content/portfolio";
             class="text-center text-secondary"
         />
     </div>
+    <PortfolioSlider />
 </section>
