--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -6,7 +6,7 @@ import { PORTFOLIO } from "../content/portfolio";
 import PortfolioSlider from "./PortfolioSlider.astro";
 ---
 
-<section id={PORTFOLIO.id} class="bg-dark scroll-mt-15 md:scroll-mt-22.5">
+<section id={PORTFOLIO.id} class="bg-dark scroll-mt-15 md:scroll-mt-22.5 pb-10 md:pb-30">
     <div
         data-aos="fade-up"
         class="max-w-360 flex flex-col items-center justify-center m-auto py-10 md:py-30 px-5 lg:px-1"
