--- a/src/components/PortfolioSlider.astro
+++ b/src/components/PortfolioSlider.astro
@@ -86,7 +86,7 @@ const items = [
                                         height={1080}
                                         loading="lazy"
                                         decoding="async"
-                                        class="block w-full aspect-[21/9] object-cover"
+                                        class="block w-full aspect-21/9 object-cover"
                                     />
                                 </div>
 
