--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -6,10 +6,13 @@ import { PORTFOLIO } from "../content/portfolio";
 import PortfolioSlider from "./PortfolioSlider.astro";
 ---
 
-<section id={PORTFOLIO.id} class="bg-dark scroll-mt-15 md:scroll-mt-22.5 pb-10 md:pb-30">
+<section
+    id={PORTFOLIO.id}
+    class="bg-dark scroll-mt-15 md:scroll-mt-22.5 pb-10 md:pb-30"
+>
     <div
         data-aos="fade-up"
-        class="max-w-360 flex flex-col items-center justify-center m-auto py-10 md:py-30 px-5 lg:px-1"
+        class="max-w-360 flex flex-col items-center justify-center m-auto pt-10 md:pt-30 pb-5 md:pb-15 px-5 lg:px-1"
     >
         <ContentHeader text={PORTFOLIO.header} class="text-secondary" />
         <ContentSubHeader
