--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -41,40 +41,6 @@ import Button from "./Button.astro";
     }
 </style>
 
-<script
-    is:inline
-    src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"
-></script>
 <script>
-    window.particlesJS?.("particles-js", {
-        particles: {
-            number: { value: 80, density: { enable: true, value_area: 800 } },
-            color: { value: "#E7E7E7" },
-            shape: { type: "circle" },
-            opacity: { value: 0.25 },
-            size: { value: 2 },
-            move: { enable: true, speed: 0.4, out_mode: "out" },
-            line_linked: {
-                enable: true,
-                distance: 160,
-                color: "#E7E7E7",
-                opacity: 0.15,
-                width: 1,
-            },
-        },
-        interactivity: {
-            detect_on: "canvas",
-            events: {
-                onhover: { enable: true, mode: "repulse" },
-                onclick: { enable: true, mode: "repulse" },
-            },
-            modes: {
-                repulse: {
-                    distance: 150,
-                    duration: 0.2,
-                },
-            },
-        },
-        retina_detect: true,
-    });
+    import "../scripts/particles.ts";
 </script>
