--- a/src/components/SliderButton.astro
+++ b/src/components/SliderButton.astro
@@ -1,11 +1,10 @@
 ---
 type Props = {
-    icon: string;
     ariaLabel?: string;
     direction: "prev" | "next";
 };
 
-const { icon, ariaLabel, direction } = Astro.props as Props;
+const { ariaLabel, direction } = Astro.props as Props;
 
 const isPrev = direction === "prev";
 
@@ -15,9 +14,9 @@ const finalLabel = ariaLabel ?? (isPrev ? "Previous slide" : "Next slide");
 ---
 
 <button
-    class={`${swiperClass} items-center justify-center absolute ${sideClass} top-1/2 -translate-y-1/2 z-20 w-10 h-10 md:w-14 md:h-14 border border-transparent rounded-lg hover:border-secondary bg-dark/30 backdrop-blur-md hover:bg-dark/50 transition duration-500 ease`}
+    class={`${swiperClass} flex items-center justify-center absolute ${sideClass} top-1/2 -translate-y-1/2 z-20 w-10 h-10 md:w-14 md:h-14 border border-transparent rounded-lg hover:border-secondary bg-dark/30 backdrop-blur-md hover:bg-dark/50 transition duration-500 ease`}
     aria-label={finalLabel}
     type="button"
 >
-    {icon}
+    <slot />
 </button>
