feat(styles): add reusable gradient utilities

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -20,7 +20,7 @@ import ContentDescription from "./ContentDescription.astro";
             <div>
                 <ContentSubHeader
                     text={ABOUT.subHeader}
-                    class="bg-linear-to-r from-gray-400 from-0% via-secondary via-50% to-gray-400 to-100% bg-clip-text text-transparent"
+                    class="gradient-light"
                 />
 
                 <ContentDescription
