--- a/src/components/CTASection.astro
+++ b/src/components/CTASection.astro
@@ -12,7 +12,7 @@ import Button from "./Button.astro";
     >
         <ContentSubHeader
             text={CTA.header}
-            class="bg-linear-to-r from-dark from-0% via-gray-500 via-50% to-dark to-100% bg-clip-text text-transparent"
+            class="gradient-dark"
         />
         <ContentDescription
             text={CTA.description}
