--- a/src/components/Portfolio.astro
+++ b/src/components/Portfolio.astro
@@ -17,7 +17,7 @@ import PortfolioSlider from "./PortfolioSlider.astro";
         <ContentHeader text={PORTFOLIO.header} class="text-secondary" />
         <ContentSubHeader
             text={PORTFOLIO.subHeader}
-            class="bg-linear-to-r from-gray-400 from-0% via-secondary via-50% to-gray-400 to-100% bg-clip-text text-transparent"
+            class="gradient-light"
         />
         <ContentDescription
             text={PORTFOLIO.description}
