--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -14,7 +14,7 @@ import { SERVICES } from "../content/services";
         <ContentHeader text={SERVICES.header} class="text-primary" />
         <ContentSubHeader
             text={SERVICES.subHeader}
-            class="bg-linear-to-r from-dark from-0% via-gray-500 via-50% to-dark to-100% bg-clip-text text-transparent"
+            class="gradient-dark"
         />
         <ContentDescription
             text={SERVICES.description}
