--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import About from "../components/About.astro";
+import ContactSection from "../components/ContactSection.astro";
 import CTASection from "../components/CTASection.astro";
 import Hero from "../components/Hero.astro";
 import Portfolio from "../components/Portfolio.astro";
@@ -14,4 +15,5 @@ import "../styles/global.css";
     <About />
     <CTASection />
     <Portfolio />
+    <ContactSection />
 </Layout>
