--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -16,7 +16,7 @@ import { SITE } from "../content/site";
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
-            href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+            href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap"
             rel="stylesheet"
         />
         <meta property="og:title" content={SITE.seo.title} />
@@ -25,7 +25,7 @@ import { SITE } from "../content/site";
         <meta property="og:image" content={SITE.seo.ogImage} />
         <meta property="og:url" content={SITE.url} />
         <meta name="generator" content={Astro.generator} />
-        
+
         <script>
             import "../scripts/menu.ts";
             import AOS from "aos";
