feat(layout): add footer section and apply minor layout improvements

--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -9,7 +9,7 @@ import Form from "./Form.astro";
 <section id={CONTACT.id} class="bg-secondary scroll-mt-15 md:scroll-mt-22.5">
     <div
         data-aos="fade-up"
-        class="max-w-360 items-center justify-center m-auto py-10 md:py-30 px-5 lg:px-1"
+        class="max-w-360 items-center justify-center m-auto pt-10 pb-0 md:py-30 px-5 lg:px-1"
     >
         <div
             class="grid grid-cols-1 gap-4 lg:grid-cols-2 lg:gap-18 items-center justify-center m-auto"
@@ -28,7 +28,7 @@ import Form from "./Form.astro";
                     text={CONTACT.description}
                     class="text-primary text-justify"
                 />
-                <div class="my-5">
+                <div class="mt-5">
                     <Form />
                 </div>
             </div>
