--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -5,23 +5,28 @@
         name="Nazwa firmy / Imię"
         placeholder="np. Krzysiek"
         required
-        class="w-full p-3 rounded-lg border-2 border-dark/20 focus:outline-accent"
+        class="w-full p-3 rounded-lg border-2 border-dark/20 focus:outline-dark/50"
     />
     <label class="text-primary">Email</label>
     <input
         type="email"
-        name="email"
+        name="Email"
         placeholder="Twój email"
         required
-        class="w-full p-3 rounded-lg border-2 border-dark/20 focus:outline-accent"
+        class="w-full p-3 rounded-lg border-2 border-dark/20 focus:outline-dark/50"
     />
     <label class="text-primary">Wiadomość</label>
     <textarea
-    rows="6"
+        rows="6"
         name="Wiadomość"
         placeholder="Opowiedz nam o swoim projekcie"
         required
-        class="w-full p-3 rounded-lg border-2 border-dark/20 focus:outline-accent"></textarea>
+        class="w-full p-3 m-0 rounded-lg border-2 border-dark/20 focus:outline-dark/50"
+    ></textarea>
+    <p class="text-primary mt-2">
+        Wysyłając formularz, akceptujesz, że przetworzymy Twoje dane w celu
+        kontaktu i obsługi zapytania.
+    </p>
 
     <button
         type="submit"
