--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -27,7 +27,7 @@ import { MENU, CTA } from "../content/menuItems";
             </p>
         </a>
 
-        <div class="hidden md:flex md:gap-7 md:ml-5 md:items-center">
+        <div class="hidden md:flex md:gap-7 md:items-center">
             {
                 MENU.map((item) => (
                     <a
