--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import Footer from "../components/Footer.astro";
 import { SITE } from "../content/site";
 ---
 
@@ -40,5 +41,6 @@ import { SITE } from "../content/site";
     <body>
         <Header />
         <slot />
+        <Footer />
     </body>
 </html>
