--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,8 +4,9 @@ import { MENU, CTA } from "../content/menuItems";
 ---
 
 <footer class="bg-dark py-10 md:py-15 flex flex-col">
+    <div class="h-0.5 bg-secondary/40 mx-5 md:mx-20"></div>
     <div
-        class="px-20 pb-10 md:pb-15 flex flex-col md:flex-row items-center justify-between gap-7"
+        class="px-20 py-10 md:py-15 flex flex-col md:flex-row items-center justify-between gap-7"
     >
         <a
             href="#home"
