--- a/src/components/Form.astro
+++ b/src/components/Form.astro
@@ -1,36 +1,40 @@
-<form action="https://formspree.io/f/mwvnbpwl" method="POST" class="space-y-4">
-    <label class="text-primary">Nazwa firmy / Imię</label>
+<form
+    action="https://formspree.io/f/mwvnbpwl"
+    method="POST"
+    class="space-y-4 text-secondary"
+>
+    <label>Nazwa firmy / Imię</label>
     <input
         type="text"
         name="Nazwa firmy / Imię"
         placeholder="np. Krzysiek"
         required
-        class="w-full p-3 rounded-lg border-2 border-dark/20 focus:outline-dark/50"
+        class="w-full p-3 rounded-lg border-2 border-secondary/40 focus:outline-secondary/50"
     />
-    <label class="text-primary">Email</label>
+    <label>Email</label>
     <input
         type="email"
         name="Email"
         placeholder="Twój email"
         required
-        class="w-full p-3 rounded-lg border-2 border-dark/20 focus:outline-dark/50"
+        class="w-full p-3 rounded-lg border-2 border-secondary/40 focus:outline-secondary/50"
     />
-    <label class="text-primary">Wiadomość</label>
+    <label>Wiadomość</label">
     <textarea
         rows="6"
         name="Wiadomość"
         placeholder="Opowiedz nam o swoim projekcie"
         required
-        class="w-full p-3 m-0 rounded-lg border-2 border-dark/20 focus:outline-dark/50"
+        class="w-full p-3 m-0 rounded-lg border-2 border-secondary/40 focus:outline-secondary/50"
     ></textarea>
-    <p class="text-primary mt-2">
+    <p class='mt-2"'>
         Wysyłając formularz, akceptujesz, że przetworzymy Twoje dane w celu
         kontaktu i obsługi zapytania.
     </p>
 
     <button
         type="submit"
-        class="px-5 py-2.5 text-lg md:text-xl rounded-lg text-center cursor-pointer self-start transition-colors duration-500 ease border-2 inline-block bg-accent border-accent text-secondary hover:bg-accent-hover hover:border-accent-hover"
+        class="px-5 py-2.5 my-4 text-lg md:text-xl rounded-lg text-center cursor-pointer self-start transition-colors duration-500 ease border-2 inline-block bg-accent border-accent text-secondary hover:bg-accent-hover hover:border-accent-hover"
     >
         Wyślij
     </button>
