--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@ import Logo from "../assets/icons/Codify-logo-ciemne.svg";
 import { MENU, CTA } from "../content/menuItems";
 ---
 
-<footer class="bg-dark py-10 md:py-15 flex flex-col">
+<footer class="bg-dark pb-10 md:pb-15 flex flex-col">
     <div class="h-0.5 bg-secondary/40 mx-5 md:mx-20"></div>
     <div
         class="px-20 py-10 md:py-15 flex flex-col md:flex-row items-center justify-between gap-7"
