--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import About from "../components/About.astro";
 import ContactSection from "../components/ContactSection.astro";
 import CTASection from "../components/CTASection.astro";
+import FaqSection from "../components/FaqSection.astro";
 import Hero from "../components/Hero.astro";
 import Portfolio from "../components/Portfolio.astro";
 import Services from "../components/Services.astro";
@@ -15,5 +16,6 @@ import "../styles/global.css";
     <About />
     <CTASection />
     <Portfolio />
+    <FaqSection />
     <ContactSection />
 </Layout>
