feat(faq): add FAQ CTA and improve text content and layout

--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -26,7 +26,7 @@ import Form from "./Form.astro";
 
                 <ContentDescription
                     text={CONTACT.description}
-                    class="text-secondary text-justify"
+                    class="text-secondary"
                 />
                 <div class="mt-5">
                     <Form />
