--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import Header from "../components/Header.astro";
 import Footer from "../components/Footer.astro";
 import { SITE } from "../content/site";
+import ContactSection from "../components/ContactSection.astro";
 ---
 
 <html lang={SITE.lang}>
@@ -41,6 +42,7 @@ import { SITE } from "../content/site";
     <body>
         <Header />
         <slot />
+        <ContactSection />
         <Footer />
     </body>
 </html>
