style: adjust gradient shades, minor layout tweaks, update hero header styling

--- a/src/components/FaqSection.astro
+++ b/src/components/FaqSection.astro
@@ -13,7 +13,7 @@ import Button from "./Button.astro";
         data-aos="fade-up"
     >
         <ContentHeader text={FAQ.header} class="text-primary" />
-        <ContentSubHeader text={FAQ.subHeader} class="gradient-dark mx-0" />
+        <ContentSubHeader text={FAQ.subHeader} class="gradient-dark mx-auto" />
         <ContentDescription
             text={FAQ.description}
             class="text-primary-lighter text-center mx-auto"
