--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -11,7 +11,7 @@ import Button from "./Button.astro";
         <div id="particles-js" class="absolute inset-0 z-10"></div>
         <div data-aos="fade-up" class="mx-2">
             <h1
-                class="text-[clamp(2.5rem,6vw,8rem)] font-medium leading-tight tracking-tight bg-linear-to-r from-primary from-0% via-secondary via-50% to-primary to-100% bg-clip-text text-transparent"
+                class="text-[clamp(2.5rem,6vw,8rem)] leading-tight font-semibold gradient-light"
             >
                 {HERO.h1}
             </h1>
